--- a/client/src/Styles/Paged.module.css
+++ b/client/src/Styles/Paged.module.css
@@ -2,6 +2,7 @@
 list-style-type: none;
 display: flex;
 flex-direction: row;
+justify-content: space-between;
 }
 .ul li{
     list-style-type: none;
@@ -17,5 +18,11 @@ flex-direction: row;
     cursor: pointer;
     border: 1px solid #d1d1d1f5;
     border-radius: 10px;
+}
+
+.a:hover{
+    box-shadow: 5px -4px 16px 42px rgba(0,198,255,0.56) inset;
+-webkit-box-shadow: 5px -4px 16px 42px rgba(0,198,255,0.56) inset;
+-moz-box-shadow: 5px -4px 16px 42px rgba(0,198,255,0.56) inset;
 }
 
