--- a/client/src/Styles/LandingPage.module.css
+++ b/client/src/Styles/LandingPage.module.css
@@ -1,5 +1,6 @@
 .div{
-    background-image: url("https://www.picgaga.com/uploads/wallpaper/anime-food-wallpapers/Jual6LUAbHWt-anime-girl-art-hd-anime-food-wallpapers.jpg");
+    /* background-image: url("https://www.picgaga.com/uploads/wallpaper/anime-food-wallpapers/Jual6LUAbHWt-anime-girl-art-hd-anime-food-wallpapers.jpg"); */
+    background-image: url("https://wallpaperaccess.com/full/4249642.jpg") ;
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
