--- a/client/src/Styles/LandingPage.module.css
+++ b/client/src/Styles/LandingPage.module.css
@@ -1,15 +1,21 @@
 .div{
     /* background-image: url("https://www.picgaga.com/uploads/wallpaper/anime-food-wallpapers/Jual6LUAbHWt-anime-girl-art-hd-anime-food-wallpapers.jpg"); */
-    background-image: url("https://wallpaperaccess.com/full/4249642.jpg") ;
-    background-repeat: no-repeat;
+    background: url("https://wallpaperaccess.com/full/4249642.jpg") no-repeat center center fixed ;
+    /* background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
+    position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 0; 
     left: 0;
     top: 0;
-    height: 100%;
+    min-height: 100%;
+    min-width: 1024px;
     width: 100%;
+    height: auto;    
+ */
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .landing {
